[gd_scene load_steps=2 format=3 uid="uid://b7wko4cw1lo5y"]

[ext_resource type="Script" path="res://scenes/components/damage_box.gd" id="1_ycyj3"]

[node name="DamageBox" type="Area2D"]
collision_layer = 8
collision_mask = 16
script = ExtResource("1_ycyj3")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
